--- a/packages/atoms-extra/lang/dev-ruby/rdoc/definition.yaml
+++ b/packages/atoms-extra/lang/dev-ruby/rdoc/definition.yaml
@@ -1,5 +1,5 @@
 name: rdoc
-version: 6.5.0
+version: 6.6.0
 category: dev-ruby
 use_flags:
 - -ruby_targets_ruby30
@@ -25,9 +25,12 @@ uri:
 - https://github.com/ruby/rdoc
 license: Ruby MIT
 labels:
-  BDEPEND: test? ( ruby_targets_ruby31? ( >=dev-ruby/psych-4.0.0[ruby_targets_ruby31(-)]
-    ) ruby_targets_ruby30? ( >=dev-ruby/psych-4.0.0[ruby_targets_ruby30(-)] ) ruby_targets_ruby27?
-    ( >=dev-ruby/psych-4.0.0[ruby_targets_ruby27(-)] ) ) ruby_targets_ruby31? ( >=dev-ruby/kpeg-1.1.0-r1[ruby_targets_ruby31(-)]
+  BDEPEND: test? ( ruby_targets_ruby32? ( >=dev-ruby/psych-4.0.0[ruby_targets_ruby32(-)]
+    ) ruby_targets_ruby31? ( >=dev-ruby/psych-4.0.0[ruby_targets_ruby31(-)] ) ruby_targets_ruby30?
+    ( >=dev-ruby/psych-4.0.0[ruby_targets_ruby30(-)] ) ruby_targets_ruby27? ( >=dev-ruby/psych-4.0.0[ruby_targets_ruby27(-)]
+    ) ) ruby_targets_ruby32? ( >=dev-ruby/kpeg-1.1.0-r1[ruby_targets_ruby32(-)] >=dev-ruby/racc-1.5.2[ruby_targets_ruby32(-)]
+    dev-ruby/rake[ruby_targets_ruby32(-)] test? ( dev-ruby/bundler[ruby_targets_ruby32(-)]
+    >=dev-ruby/minitest-5.8:5[ruby_targets_ruby32(-)] ) ) ruby_targets_ruby31? ( >=dev-ruby/kpeg-1.1.0-r1[ruby_targets_ruby31(-)]
     >=dev-ruby/racc-1.5.2[ruby_targets_ruby31(-)] dev-ruby/rake[ruby_targets_ruby31(-)]
     test? ( dev-ruby/bundler[ruby_targets_ruby31(-)] >=dev-ruby/minitest-5.8:5[ruby_targets_ruby31(-)]
     ) ) ruby_targets_ruby30? ( >=dev-ruby/kpeg-1.1.0-r1[ruby_targets_ruby30(-)] >=dev-ruby/racc-1.5.2[ruby_targets_ruby30(-)]
@@ -35,29 +38,34 @@ labels:
     >=dev-ruby/minitest-5.8:5[ruby_targets_ruby30(-)] ) ) ruby_targets_ruby27? ( >=dev-ruby/kpeg-1.1.0-r1[ruby_targets_ruby27(-)]
     >=dev-ruby/racc-1.5.2[ruby_targets_ruby27(-)] dev-ruby/rake[ruby_targets_ruby27(-)]
     test? ( dev-ruby/bundler[ruby_targets_ruby27(-)] >=dev-ruby/minitest-5.8:5[ruby_targets_ruby27(-)]
-    ) ) ruby_targets_ruby31? ( dev-lang/ruby:3.1 ) ruby_targets_ruby30? ( dev-lang/ruby:3.0
-    ) ruby_targets_ruby27? ( dev-lang/ruby:2.7 ) ruby_targets_ruby31? ( test? ( dev-ruby/rake[ruby_targets_ruby31(-)]
-    ) ) ruby_targets_ruby30? ( test? ( dev-ruby/rake[ruby_targets_ruby30(-)] ) ) ruby_targets_ruby27?
-    ( test? ( dev-ruby/rake[ruby_targets_ruby27(-)] ) ) ruby_targets_ruby31? ( virtual/rubygems[ruby_targets_ruby31(-)]
-    ) ruby_targets_ruby30? ( virtual/rubygems[ruby_targets_ruby30(-)] ) ruby_targets_ruby27?
-    ( virtual/rubygems[ruby_targets_ruby27(-)] ) test? ( ruby_targets_ruby31? ( virtual/rubygems[ruby_targets_ruby31(-)]
+    ) ) ruby_targets_ruby32? ( dev-lang/ruby:3.2 ) ruby_targets_ruby31? ( dev-lang/ruby:3.1
+    ) ruby_targets_ruby30? ( dev-lang/ruby:3.0 ) ruby_targets_ruby27? ( dev-lang/ruby:2.7
+    ) ruby_targets_ruby32? ( test? ( dev-ruby/rake[ruby_targets_ruby32(-)] ) ) ruby_targets_ruby31?
+    ( test? ( dev-ruby/rake[ruby_targets_ruby31(-)] ) ) ruby_targets_ruby30? ( test?
+    ( dev-ruby/rake[ruby_targets_ruby30(-)] ) ) ruby_targets_ruby27? ( test? ( dev-ruby/rake[ruby_targets_ruby27(-)]
+    ) ) ruby_targets_ruby32? ( virtual/rubygems[ruby_targets_ruby32(-)] ) ruby_targets_ruby31?
+    ( virtual/rubygems[ruby_targets_ruby31(-)] ) ruby_targets_ruby30? ( virtual/rubygems[ruby_targets_ruby30(-)]
+    ) ruby_targets_ruby27? ( virtual/rubygems[ruby_targets_ruby27(-)] ) test? ( ruby_targets_ruby32?
+    ( virtual/rubygems[ruby_targets_ruby32(-)] ) ruby_targets_ruby31? ( virtual/rubygems[ruby_targets_ruby31(-)]
     ) ruby_targets_ruby30? ( virtual/rubygems[ruby_targets_ruby30(-)] ) ruby_targets_ruby27?
     ( virtual/rubygems[ruby_targets_ruby27(-)] ) )
-  DEPEND: ruby_targets_ruby31? ( dev-lang/ruby:3.1 ) ruby_targets_ruby30? ( dev-lang/ruby:3.0
-    ) ruby_targets_ruby27? ( dev-lang/ruby:2.7 ) ruby_targets_ruby31? ( virtual/rubygems[ruby_targets_ruby31(-)]
-    ) ruby_targets_ruby30? ( virtual/rubygems[ruby_targets_ruby30(-)] ) ruby_targets_ruby27?
-    ( virtual/rubygems[ruby_targets_ruby27(-)] )
-  IUSE: doc test ruby_targets_ruby27 ruby_targets_ruby30 ruby_targets_ruby31 test
-    test
-  RDEPEND: '>=app-eselect/eselect-ruby-20220313 ruby_targets_ruby31? ( >=dev-ruby/psych-4.0.0[ruby_targets_ruby31(-)]
-    ) ruby_targets_ruby30? ( >=dev-ruby/psych-4.0.0[ruby_targets_ruby30(-)] ) ruby_targets_ruby27?
-    ( >=dev-ruby/psych-4.0.0[ruby_targets_ruby27(-)] ) ruby_targets_ruby31? ( dev-lang/ruby:3.1
+  DEPEND: ruby_targets_ruby32? ( dev-lang/ruby:3.2 ) ruby_targets_ruby31? ( dev-lang/ruby:3.1
     ) ruby_targets_ruby30? ( dev-lang/ruby:3.0 ) ruby_targets_ruby27? ( dev-lang/ruby:2.7
-    ) ruby_targets_ruby31? ( virtual/rubygems[ruby_targets_ruby31(-)] ) ruby_targets_ruby30?
-    ( virtual/rubygems[ruby_targets_ruby30(-)] ) ruby_targets_ruby27? ( virtual/rubygems[ruby_targets_ruby27(-)]
-    )'
+    ) ruby_targets_ruby32? ( virtual/rubygems[ruby_targets_ruby32(-)] ) ruby_targets_ruby31?
+    ( virtual/rubygems[ruby_targets_ruby31(-)] ) ruby_targets_ruby30? ( virtual/rubygems[ruby_targets_ruby30(-)]
+    ) ruby_targets_ruby27? ( virtual/rubygems[ruby_targets_ruby27(-)] )
+  IUSE: doc test ruby_targets_ruby27 ruby_targets_ruby30 ruby_targets_ruby31 ruby_targets_ruby32
+    test test
+  RDEPEND: '>=app-eselect/eselect-ruby-20220313 ruby_targets_ruby32? ( >=dev-ruby/psych-4.0.0[ruby_targets_ruby32(-)]
+    ) ruby_targets_ruby31? ( >=dev-ruby/psych-4.0.0[ruby_targets_ruby31(-)] ) ruby_targets_ruby30?
+    ( >=dev-ruby/psych-4.0.0[ruby_targets_ruby30(-)] ) ruby_targets_ruby27? ( >=dev-ruby/psych-4.0.0[ruby_targets_ruby27(-)]
+    ) ruby_targets_ruby32? ( dev-lang/ruby:3.2 ) ruby_targets_ruby31? ( dev-lang/ruby:3.1
+    ) ruby_targets_ruby30? ( dev-lang/ruby:3.0 ) ruby_targets_ruby27? ( dev-lang/ruby:2.7
+    ) ruby_targets_ruby32? ( virtual/rubygems[ruby_targets_ruby32(-)] ) ruby_targets_ruby31?
+    ( virtual/rubygems[ruby_targets_ruby31(-)] ) ruby_targets_ruby30? ( virtual/rubygems[ruby_targets_ruby30(-)]
+    ) ruby_targets_ruby27? ( virtual/rubygems[ruby_targets_ruby27(-)] )'
   emerge.packages: dev-ruby/rdoc
   kit: ruby-kit
   original.package.name: dev-ruby/rdoc
   original.package.slot: "0"
-  original.package.version: 6.5.0
+  original.package.version: 6.6.0
